--- a/05/index.html
+++ b/05/index.html
@@ -26,14 +26,7 @@
 </head>
 <script type="text/javascript" src="https://get.goXTK.com/xtk_edge.js"></script>
 <script type="text/javascript" src="https://get.goXTK.com/xtk_xdat.gui.js"></script>
-<script type="importmap">
-  {
-    "imports": {
-      "three": "https://cdn.jsdelivr.net/npm/three@<version>/build/three.module.js",
-      "three/addons/": "https://cdn.jsdelivr.net/npm/three@<version>/examples/jsm/"
-    }
-  }
-</script>
+<script src="https://threejs.org/build/three.min.js" type="text/javascript"></script>
 <script src="https://threejs.org/examples/js/controls/TrackballControls.js" type="text/javascript"></script>
 <script type="text/javascript">
     window.onload = function() {
